--- a/02_assignments/mini_lab-ttests.qmd
+++ b/02_assignments/mini_lab-ttests.qmd
@@ -140,7 +140,7 @@ t.test(USArrests$Murder[USArrests$west == 1],
 
 I use "less" because I'm doing a one-sided hypothesis test. If I were doing a one-sided hypothesis the other way, I would use "greater".
 
-c.  **Write down your conclusions.** The p-value is 0.1374. This means that there is a 13.74% chance we'd observe the data we do if the null hypothesis were true. This is higher than our significance level of 5%, so we fail to reject the null hypothesis. There is not sufficient evidence to say that murder arrest rates in the west are less than murder arrest rates in non-western states.
+c.  **Write down your conclusions.** The p-value is 0.1833. This means that there is an 18.33% chance we'd observe the data we do if the null hypothesis were true. This is higher than our significance level of 5%, so we fail to reject the null hypothesis. There is not sufficient evidence to say that murder arrest rates in the west are less than murder arrest rates in non-western states.
 
 ### Exercise
 
